templates/commerce/header.scss
@import '../../styles/commerce_styles/globals';

.header {
  position: fixed;
  background: white;
  top: 0;
  left: 0;
  width: 100%;
  padding-top: 25px;
  margin-bottom: 27px;
}

.header_size {
  margin-top: 257px;
}

.header__text {
  font-size: 14px;
  line-height: 20px;
  color: $neutral_darker;
  display: flex;
  align-items: center;
}

.header__top {
  display: flex;
  align-items: center;
  margin-bottom: 40px;
}

.header__icon {
  margin-right: 9px;
}

.header__top__links {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header__dropdown {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.header__dropdown a {
  color: $neutral_darker;
  font-size: 14px;
  line-height: 20px;
}

.header__dropdown :last-child :first-child {
  padding-right: 0;
}

.header__dropdown a:focus {
  color: $secondary_darkest;
}

.header .nav-link {
  font-weight: 400;
}

.header .nav-link.active {
  font-weight: 700;
}

.header .navbar {
  padding-top: 0;
  padding-bottom: 0;
  margin-top: 11px;
  line-height: 120%;
}

.header a:hover {
  color: $secondary_darkest;
}

.header__logo {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.header__logo_img {
  width: 100%;
}

.header__search {
  display: flex;
  justify-content: center;
  align-items: center;
}

.header .mr-auto a:first-child {
  padding-left: 0;
}

.header__links {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header__links a:hover {
  opacity: 0.7;
}

.header__border {
  margin-top: 25px;
  border-bottom: 1px solid #FBF8F5;
}

.header__navbar_text {
  font-size: 14px;
  line-height: 20px;
  color: $neutral_darker;
}

@media (max-width: 991px) {
  .header_size {
    margin-top: 293px;
  }
}

@media (max-width: 767px) {
  .header_size {
    margin-top: 357px;
  }
}

